# Bipedal_Robot_ODroid_Driver

./: .gitignore  CMakeLists.txt  README.md
.history/include/communication/: spi_driver_20260202171722.hpp  spi_driver_20260202172249.hpp  spi_driver_20260202172254.hpp  spi_driver_20260202172916.hpp  spi_driver_20260202173301.hpp  spi_driver_20260202175430.hpp  spi_driver_20260202175755.hpp  spi_driver_20260202180509.hpp  spi_driver_20260202180518.hpp  spi_driver_20260202181458.hpp
.history/include/core/: data_hub_20260202165326.hpp  robot_interface_20260202165324.hpp  robot_interface_20260202172956.hpp  robot_interface_20260202173906.hpp  robot_interface_20260202174714.hpp
.history/tests/: test_motor_control_20260201223824.cpp  test_motor_control_20260202161744.cpp  test_motor_control_20260202164729.cpp  test_motor_control_20260202170014.cpp  test_motor_control_20260202170532.cpp  test_motor_control_20260202173119.cpp  test_motor_control_20260202173948.cpp  test_motor_control_20260202181409.cpp  test_motor_control_20260202181801.cpp  test_spi_comm_20260202161745.cpp  test_spi_comm_20260202170200.cpp
include/common/: constants.hpp  logger.hpp  time_utils.hpp  types.hpp
include/communication/: jetson_protocol.hpp  protocol.hpp  spi_driver.hpp  udp_driver.hpp
include/core/: data_hub.hpp  jetson_interface.hpp  robot_interface.hpp
include/realtime/: lock_free_buffer.hpp  rt_thread.hpp  rt_utils.hpp
scripts/: build.sh  setup_rt_permissions.sh
src/: main.cpp
tests/: test_full_loop.cpp  test_jetson_comm.cpp  test_motor_control.cpp  test_rt_timing.cpp  test_spi_comm.cpp
